remove other <i> and deptartement typo

--- a/templates/common/form/download_upload_form.html
+++ b/templates/common/form/download_upload_form.html
@@ -4,7 +4,7 @@
     <span class="fr-icon-warning-line fr-mr-1w" aria-hidden="true"></span>Attention, la liste des {{ what }} téléversée écrase la liste courante.
 </p>
 {% if file_type == "logements_edd" %}
-    <p class="fr-mt-1w"><i>Depuis le 1er juin 2022, un nouveau format de fichier est entré en vigueur. La colonne "type des logements" a été remplacée par "numéro de lot". Vous pouvez mettre à jour votre fichier en téléchargeant le nouveau modèle puis en le téléversant à nouveau.</i></p>
+    <p class="fr-mt-1w"><em>Depuis le 1er juin 2022, un nouveau format de fichier est entré en vigueur. La colonne "type des logements" a été remplacée par "numéro de lot". Vous pouvez mettre à jour votre fichier en téléchargeant le nouveau modèle puis en le téléversant à nouveau.</em></p>
 {% endif %}
 
 <input
