--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -57,7 +57,7 @@
                                 <label class="fr-label" for="search_input">
                                     Préciser un département
                                 </label>
-                                <input class="fr-input" placeholder="Ex : 13" type="recherche" name="deptartement_input" value="{{conventions.deptartement_input}}">
+                                <input class="fr-input" placeholder="Ex : 13" type="recherche" name="departement_input" value="{{conventions.departement_input}}">
                             </div>
                         </div>
                     </div>
