--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -46,7 +46,7 @@
 
                         <h4 class="fr-mb-1w">EDD Simplifié</h4>
                         <p class="fr-text--xs notes fr-mb-1w">
-                            <i>L’EDD simplifié doit comporter tous les logements du programme quels que soient leurs financements.</i>
+                            <em>L’EDD simplifié doit comporter tous les logements du programme quels que soient leurs financements.</em>
                         </p>
 
                         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
