--- a/templates/emails/welcome_user.html
+++ b/templates/emails/welcome_user.html
@@ -1,5 +1,5 @@
 <h4>Bienvenue sur la plateforme APiLos, un service du SIAP</h4>
-<span><i>Le portail qui facilite l’accès aux logements sociaux par la simplification des conventions</i></span>
+<span><em>Le portail qui facilite l’accès aux logements sociaux par la simplification des conventions</em></span>
 
 <p>Vous avez désormais accès à la plateforme avec les identifiants suivants : </p>
 
