--- a/templates/operations/conventions.html
+++ b/templates/operations/conventions.html
@@ -18,7 +18,7 @@
 
             <div class="fr-my-5w fr-table fr-table--bordered table--layout-fixed">
                 <table>
-                    <caption><i>{{ conventions|length }} convention{{ conventions|length|pluralize }} associée{{ conventions|length|pluralize }}</i></caption>
+                    <caption><em>{{ conventions|length }} convention{{ conventions|length|pluralize }} associée{{ conventions|length|pluralize }}</em></caption>
                     <thead>
                         <tr class="th_inline">
                             <th title="Date de livraison et mise en service" scope="col">
