--- a/templates/settings/user_list.html
+++ b/templates/settings/user_list.html
@@ -50,7 +50,7 @@
                     <td>
                         {{ user.username}}
                         {% if user.is_administrator %}
-                            <i class="fr-text--light fr-text--sm">(Admin)</i>
+                            <em class="fr-text--light fr-text--sm">(Admin)</em>
                         {% endif %}
                     </td>
                     <td>{{ user.first_name}}</td>
