--- a/templates/common/editable_fields_info.html
+++ b/templates/common/editable_fields_info.html
@@ -1,3 +1,3 @@
 <p class="fr-text--xs notes">
-  <i>Tous les champs de cette section sont modifiables si cela est nécessaire.</i>
+    <em>Tous les champs de cette section sont modifiables si cela est nécessaire.</em>
 </p>
