--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -53,8 +53,8 @@
                             </script>
                         </form>
                         <div class="fr-col-md-12 fr-mt-4w">
-                            <p><i>Le préfixe du numéro de convention est modifiable dans <a class="fr-link fr-mb-1w" href="{% url 'settings:administrations' %}" data-turbo="false">les paramètres de votre administration</a>
-                            </i></p>
+                            <p><em>Le préfixe du numéro de convention est modifiable dans <a class="fr-link fr-mb-1w" href="{% url 'settings:administrations' %}" data-turbo="false">les paramètres de votre administration</a>
+                            </em></p>
 
 
 
