--- a/templates/conventions/comments.html
+++ b/templates/conventions/comments.html
@@ -28,7 +28,7 @@
                     <div class="fr-col-md-12">
                         <div class="apilos-bordered fr-my-3w">
                             <p class="notes">
-                                <i>Ces informations sont complémentaires et à destination de l’instructeur. Elles ne figureront pas dans le document final de la convention.</i>
+                                <em>Ces informations sont complémentaires et à destination de l’instructeur. Elles ne figureront pas dans le document final de la convention.</em>
                             </p>
                             {% include "common/form/input_upload.html" with form_input=form.comments form_input_files=form.comments_files object_name='convention' object_uuid=convention.uuid file_list=convention.comments_files.values textarea=True verticalDisplay=True object_field="convention__comments__"|add:form.uuid.value %}
                         </div>
