--- a/templates/layout/header_no_cerbere.html
+++ b/templates/layout/header_no_cerbere.html
@@ -28,7 +28,7 @@
                         <p class="fr-header__service-title">APiLos</p>
                     </a>
                     <p class="fr-header__service-tagline">Le portail qui facilite l’accès aux logements sociaux par la simplification des conventions</p>
-                    <p class="fr-header__service-tagline fr-text--sm"><i>Un service du SIAP (Système d'Information des Aides à la Pierre)</i></p>
+                    <p class="fr-header__service-tagline fr-text--sm"><em>Un service du SIAP (Système d'Information des Aides à la Pierre)</em></p>
                 </div>
             </div>
             {% if not without_action_button %}
