--- a/templates/settings/remove_bailleur.html
+++ b/templates/settings/remove_bailleur.html
@@ -19,7 +19,7 @@
                             <form method="post" action="{% url 'settings:edit_user' username=form.username.value %}">
                                 {% csrf_token %}
                                 <input type="hidden" name="bailleur" value="{{bailleur.uuid}}">
-                                <p>Êtes vous certain de vouloir supprimer l'accès au conventions du bailleur ‹‹<i>{{bailleur}}</i>›› à l'utilisateur ‹‹{{ form.username.value }}››</p>
+                                <p>Êtes vous certain de vouloir supprimer l'accès au conventions du bailleur ‹‹<em>{{bailleur}}</em>›› à l'utilisateur ‹‹{{ form.username.value }}››</p>
 
                                 <button class="fr-btn fr-mt-3w" name="action_type", value="remove_bailleur">
                                     Supprimer
