S463 add departements in search (#238)
* Add departement in search of convention only for staff users

* Add departement in search of convention only for staff users

* Add departement in search of convention only for staff users

* remove other <i> and deptartement typo

--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -44,7 +44,7 @@
         {% else %}
             <div class="fr-mt-1w">
                 {% if textarea %}
-                    <i class="fr-text--sm">et/ou </i>
+                    <em class="fr-text--sm">et/ou </em>
                 {% endif %}
 
                 <button type="button" class="fr-btn  fr-icon-upload-line fr-btn--icon-left fr-mb-1w" id="{{form_input_files.id_for_label}}_dz_button">
