init : fiche CAF + generate button

--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -18,7 +18,7 @@
                     <ul>
                         <li>créer des avenants</li>
                         <li>éditer une fiche CAF</li>
-                        <li>résilier la convention</li>
+                        <li>résilier la convention</li>s
                     </ul>
                 </div>
                 <div class="fr-col-12 fr-col-lg-6">
