--- a/static/css/main.css
+++ b/static/css/main.css
@@ -610,7 +610,7 @@ table.fullwidth {
 .apilos-colored_status--Transmise {
   background-color: #666666; /* grey-425 */
 }
-.apilos-colored_status--Résiliée {
+.apilos-colored_status--Resiliee {
   background-color: #bebebe; /* grey-425 */
 }
 
