--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -21,7 +21,7 @@
         <input type="hidden" id="convention_uuid" value="{{convention.uuid}}">
         <div class="fr-container-fluid ds_banner">
             {% include "conventions/common/form_header.html" with convention=convention %}
-            {% if convention.statut != "6. Résiliée" %}
+            {% if convention.statut_for_template.key_statut != "Resiliee" %}
                 {% include "common/step_progressbar.html" with convention=convention %}
             {% endif %}
             <div class="fr-container">
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                 {% endif %}
-                {% if convention.statut != "6. Résiliée" %}
+                {% if convention.has_comment %}
                     <turbo-frame id="opened_comments_block" data-turbo="true">
                         {% include "comments/opened_comments.html" %}
                     </turbo-frame>
@@ -230,7 +230,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                {% if convention.has_comment %}
                                                     {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' label='Références cadastrales' callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col">Section {% include "common/form/required_field_star.html" %}</th>
@@ -244,7 +244,7 @@
                                                 {% with reference_uuid=reference.uuid|slugify %}
                                                     {% with main_object_field="reference_cadastrale__uuid__"|add:reference_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                            {% if convention.has_comment %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Référence cadastrale" callback_click="refresh_opened_comments" %}
                                                                 </td>
@@ -301,7 +301,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                {% if convention.comment %}
                                                     {% include 'common/utils/comments_header.html' with object_name='logement_edd' label="Logements de l'EDD" callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col">Financement {% include "common/form/required_field_star.html" %}</th>
@@ -314,7 +314,7 @@
                                                 {% with lgt_uuid=lgt.uuid|slugify %}
                                                     {% with main_object_field="logement_edd__uuid__"|add:lgt_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                            {% if convention.comment %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement de l'EDD" callback_click="refresh_opened_comments" %}
                                                                 </td>
@@ -361,7 +361,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                {% if convention.comment %}
                                                     {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Financements' callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col">Numéro</th>
@@ -377,7 +377,7 @@
                                                 {% with pret_uuid=pret.uuid|slugify %}
                                                     {% with main_object_field="pret__uuid__"|add:pret_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                            {% if convention.has_comment %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Prêt ou financement" callback_click="refresh_opened_comments" %}
                                                                 </td>
@@ -434,7 +434,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                {% if convention.comment %}
                                                     {% include 'common/utils/comments_header.html' with object_name='logement' label='Logements' callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col" class="col__width--150">Désignation {% include "common/form/required_field_star.html" %}</th>
@@ -453,7 +453,7 @@
                                                 {% with logement_uuid=logement.uuid|slugify %}
                                                     {% with main_object_field="logement__uuid__"|add:logement_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                            {% if convention.has_comment %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement" callback_click="refresh_opened_comments" %}
                                                                 </td>
@@ -490,7 +490,7 @@
                                                 {% endwith %}
                                             {% endfor %}
                                             <tr>
-                                                <td colspan=" {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}3{% else %}2{% endif %}" class="fr-text--lg">
+                                                <td colspan=" {% if convention.has_comment %}3{% else %}2{% endif %}" class="fr-text--lg">
                                                     Total
                                                 </td>
                                                 <td id="total_sh" class="fr-text--lg">
@@ -540,7 +540,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                {% if convention.has_comment %}
                                                     {% include 'common/utils/comments_header.html' with object_name='annexe' label="Annexes" callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col" class="col__width--150">Type d'annexe {% include "common/form/required_field_star.html" %}</th>
@@ -556,7 +556,7 @@
                                                 {% with annexe_uuid=annexe.uuid|slugify %}
                                                     {% with main_object_field="annexe__uuid__"|add:annexe_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                            {% if convention.has_comment %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Annexe" callback_click="refresh_opened_comments" %}
                                                                 </td>
@@ -633,7 +633,7 @@
                                     <table>
                                         <thead>
                                             <tr>
-                                                {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                {% if convention.has_comment %}
                                                     {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label="Type de stationnements" callback_click="refresh_opened_comments" %}
                                                 {% endif %}
                                                 <th scope="col" class="col__width--150">Type de stationnement {% include "common/form/required_field_star.html" %}</th>
@@ -646,7 +646,7 @@
                                                 {% with stationnement_uuid=stationnement.uuid|slugify %}
                                                     {% with main_object_field="type_stationnement__uuid__"|add:stationnement_uuid %}
                                                         <tr id="{{main_object_field}}_group">
-                                                            {% if convention.statut != '1. Projet' and convention.statut != '6. Résiliée' %}
+                                                            {% if convention.has_comment %}
                                                                 <td id="{{main_object_field}}_div">
                                                                     {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Type de stationnement" callback_click="refresh_opened_comments" %}
                                                                 </td>
