manage profile option for staff user

--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -10,6 +10,7 @@
                 </a>
             </div>
             <div class="fr-footer__content">
+                {% include "layout/manage_staff_profile.html" %}
                 <p class="fr-footer__content-desc">
                     APiLos est une startup d'état de l'incubateur beta.gouv.fr sous la direction de
                     la fabrique du numérique dépendant du Ministère de la Transition écologique et
