--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -28,9 +28,9 @@
                     <div class="fr-grid-row fr-grid-row--gutters">
                         <div class="fr-col-12">
                             <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
-                                <p>Le document de convention n'est pas encore soumis à l'instruction{% if user.is_bailleur %},
+                                <p>Le document de convention n'est pas encore soumis à l'instruction{% if request|is_bailleur %},
                                     pour finaliser votre demande de conventionnement, vous devez cliquer sur le bouton
-                                    <b>"Soumettre au service instructeur"</b> en bas de page{% endif %}</p>
+                                    <strong>"Soumettre au service instructeur"</strong> en bas de page{% endif %}</p>
                             </div>
                         </div>
                     </div>
