--- a/templates/settings/common/side_menu.html
+++ b/templates/settings/common/side_menu.html
@@ -7,12 +7,12 @@
                 <li class="fr-sidemenu__item{% if active_menu == 'profile' %} fr-sidemenu__item--active{% endif %}">
                     <a class="fr-sidemenu__link" href="{% url 'settings:profile' %}" target="_self" {% if active_menu == 'profile' %}aria-current="page"{% endif %}>Votre profil</a>
                 </li>
-                {% if request.user.is_bailleur %}
+                {% if request|is_bailleur %}
                     <li class="fr-sidemenu__item{% if active_menu == 'bailleurs' %} fr-sidemenu__item--active{% endif %}">
                         <a class="fr-sidemenu__link" href="{% url 'settings:bailleurs' %}" target="_self" {% if active_menu == 'bailleurs' %}aria-current="page"{% endif %}>Bailleurs</a>
                     </li>
                 {% endif %}
-                {% if request.user.is_instructeur %}
+                {% if request|is_instructeur %}
                     <li class="fr-sidemenu__item{% if active_menu == 'administrations' %} fr-sidemenu__item--active{% endif %}">
                         <a class="fr-sidemenu__link" href="{% url 'settings:administrations' %}" target="_self" {% if active_menu == 'administrations' %}aria-current="page"{% endif %}>Administrations</a>
                     </li>
