--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -119,6 +119,9 @@
                                 }
                             },
                             series: [{
+                                name: "Transmise",
+                                data: {{ conv_bydept.Transmise }}
+                            }, {
                                 name: "A signer",
                                 data: {{ conv_bydept.A_signer }}
                             }, {
